--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -19,10 +19,15 @@
     line-height: 163%;
 }
 
-.intro__list-text {
+.intro__list {
+    list-style: none;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
     line-height: 18px;
+}
+
+.intro__list-number {
+    font-weight: 400;
 }
