--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,12 +1,35 @@
 .cover {
-    width: 1024px;
-    height: 640px;
     background-image: url("../../images/cover-trains.jpg");
-    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    text-align: center;
 }
 
-.cover:hover {
-    opacity: .3;
+.cover::after {
+    content: "";
+    width: 0;
+    height: 0;
+    margin-left: -1px;
+    padding-top: calc(740/ 1184 * 100%);
+}
+
+.cover__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 32px;
+    text-decoration: none;
+    position: relative;
+}
+
+.cover__item:hover:before {
+    content: "";
+    background: rgba(0,0,0,.5);
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .cover__title {
@@ -15,8 +38,8 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    text-align: center;
-    margin-top: 195px;
+    max-width: 350px;
+    z-index: 1;
 }
 
 .cover__subtitle {
@@ -25,6 +48,6 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    text-align: center;
-    margin-top: 32px;
+    max-width: 350px;
+    z-index: 1;
 }
