--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -14,11 +14,13 @@
     padding-right: 18px;
     text-decoration: none;
     color: white;
+    display: flex;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 28px;
+    list-style: none;
 }
 
 .header__lang-link:last-of-type {
