--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,15 +1,17 @@
 .photo-grid {
-    display: grid;
-    grid-template-rows: repeat(4, 300px);
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
-    gap: 14px;
     margin: 0 auto;
     width: 928px;
     height: 942px;
 }
 
 .photo-grid__item {
-    width: 300px;
-    height: 225px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
+    gap: 14px;
+}
+
+.photo-grid__image {
+    list-style: none;
+    width: 100%;
+    height: 100%;
 }
