--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,9 +1,11 @@
 .cover {
     background-image: url("../../images/cover-trains.jpg");
-    background-repeat: no-repeat;
     background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
     text-align: center;
+    margin-top: 92px;
+    position: relative;
 }
 
 .cover::after {
@@ -17,19 +19,21 @@
 .cover__item {
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
     width: 100%;
-    padding: 32px;
-    text-decoration: none;
-    position: relative;
 }
 
-.cover__item:hover:before {
+.cover:hover:before {
     content: "";
-    background: rgba(0,0,0,.5);
+    background: rgba(0,0,0,.7);
     width: 100%;
     height: 100%;
     position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 
 .cover__title {
@@ -38,8 +42,11 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    max-width: 350px;
+    max-width: 560px;
     z-index: 1;
+    margin: 0;
+    text-decoration: none;
+    color: white;
 }
 
 .cover__subtitle {
@@ -48,6 +55,17 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    max-width: 350px;
+    max-width: 360px;
     z-index: 1;
+    margin: 32px 0 0 0;
+}
+
+.cover__overlay {
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
 }
