--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,8 @@
 .footer {
     display: flex;
     justify-content: space-between;
-    padding:92px 48px 48px 24px;
+    padding-top: 92px;
+    padding-bottom: 24px;
 }
 
 .footer__links {
@@ -31,4 +32,5 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
+    max-width: 186px;
 }
