--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 28px 48px 56px;
+    margin: 28px 0 0;
+    max-width: 1280px;
 }
 
 .header__logo {
@@ -10,17 +11,19 @@
     height: 52px;
 }
 
+.header__lang-links {
+    display: flex;
+}
+
 .header__lang-link {
     padding-right: 18px;
     text-decoration: none;
     color: white;
-    display: flex;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 28px;
-    list-style: none;
 }
 
 .header__lang-link:last-of-type {
