--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,8 +1,12 @@
 .lead {
-    margin: 0 48px 92px;
+    margin: 56px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .lead__title {
+    max-width: 720px;
     text-align: center;
     font-family: 'Inter';
     font-style: normal;
@@ -13,8 +17,9 @@
 }
 
 .lead__subtitle {
+    max-width: 640px;
     text-align: center;
-    margin: 32px auto 56px;
+    margin: 32px 0 56px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -22,8 +27,24 @@
     line-height: 36px;
 }
 
+.lead__container-image {
+    margin: 0;
+}
+
 .lead__image {
     width: 928px;
     height: 580px;
-    margin: 0 48px 0;
+    margin: 0 auto;
+}
+
+.lead__caption {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 14px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    padding-top: 8px;
+
 }
