--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,17 +1,17 @@
 .photo-grid {
-    margin: 0 auto;
-    width: 928px;
-    height: 942px;
+    margin-top: 92px;
 }
 
 .photo-grid__item {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
-    gap: 14px;
+    gap: 16px;
+    list-style: none;
+    object-fit: cover;
+    padding-left: 0;
 }
 
 .photo-grid__image {
-    list-style: none;
     width: 100%;
     height: 100%;
 }
