--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,5 @@
 .places {
-    margin: 92px 48px 92px;
+    margin-top: 92px;
     gap: 80px
 }
 
@@ -18,6 +18,9 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
+    padding-bottom: 48px;
+    margin: 0;
+    max-width: 460px;
 }
 
 .place__image {
@@ -25,7 +28,15 @@
     height: 440px;
 }
 
+.place__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 40px;
+}
+
 .place__url-heading {
+    max-width: 456px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -55,4 +66,5 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 163%;
+    max-width: 484px;
 }
