--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,46 +5,8 @@
     align-items: center;
 }
 
-.lead__title {
-    max-width: 720px;
-    text-align: center;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 96px;
-    line-height: 100px;
-    margin: 0 auto;
-}
-
-.lead__subtitle {
-    max-width: 640px;
-    text-align: center;
-    margin: 32px 0 56px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 36px;
-}
-
-.lead__container-image {
-    margin: 0;
-}
-
-.lead__image {
-    width: 928px;
-    height: 580px;
-    margin: 0 auto;
-}
-
-.lead__caption {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 14px;
-    letter-spacing: 1.5px;
-    text-transform: uppercase;
-    padding-top: 8px;
-
+@media screen and (max-width: 1024px){
+    .lead {
+        margin-top: 48px;
+    }
 }
