--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -1,7 +1,19 @@
 .cover__item {
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
+    text-decoration: none;
     width: 100%;
+    background: rgba(0, 0, 0, .3);
+    position: relative;
+}
+
+.cover__item:hover:before {
+    content: "";
+    background: rgba(0, 0, 0, .8);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: opacity .3s ease;
 }
