--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,5 @@
 .cover__title {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
@@ -7,7 +7,6 @@
     max-width: 560px;
     z-index: 1;
     margin: 0;
-    text-decoration: none;
     color: white;
 }
 
