--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,37 +4,14 @@
     background-repeat: no-repeat;
     display: flex;
     text-align: center;
-    margin-top: 92px;
-    position: relative;
-    left: 48px;
-    right: 48px;
+    margin: 92px auto 0;
     max-width: 1184px;
-    max-height: 740px;
+    box-sizing: border-box;
 }
 
-.cover::after {
+.cover:after {
     content: "";
     width: 0;
     height: 0;
-    margin-left: -1px;
-    padding-top: calc(740/ 1184 * 100%);
-}
-
-.cover:hover:before {
-    content: "";
-    background: rgba(0,0,0,.7);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
-
-@media screen and (max-width: 1024px) {
-    .cover {
-        left: 0;
-        right: 0;
-    }
+    padding-top: calc(740 / 1184 * 100%);
 }
