--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,5 +1,5 @@
 .footer__link {
-    font-family: 'Inter';
+    font-family: 'Inter', serif ;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -10,6 +10,7 @@
 
 .footer__link:hover {
     opacity: .8;
+    transition: opacity .3s ease;
 }
 
 @media screen and (max-width: 320px) {
@@ -18,9 +19,6 @@
         line-height: 24px;
         padding-bottom: 15px;
     }
-}
-
-@media screen and (max-width: 320px) {
     .footer__link:last-of-type {
         padding-bottom: 0;
     }
