--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     gap: 18px;
+    list-style: none;
+    padding-left: 0;
 }
 
 @media screen and (max-width: 320px) {
