--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,7 +1,7 @@
 .intro__list {
     max-width: 690px;
     list-style: none;
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
