--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,8 +1,8 @@
 .lead__subtitle {
     max-width: 640px;
     text-align: center;
-    margin: 32px 0 65px;
-    font-family: 'Inter';
+    margin: 32px 0 62px;
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
