--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,7 +1,7 @@
 .place__link {
     text-decoration: underline;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -11,4 +11,5 @@
 
 .place__link:hover {
     opacity: .8;
+    transition: opacity .3s ease;
 }
