--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,6 @@
 .place__url-heading {
     max-width: 456px;
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -8,4 +8,5 @@
     letter-spacing: 0.2em;
     color: #AAAAAA;
     margin: 0;
+    text-transform: uppercase;
 }
