--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -15,3 +15,9 @@
     height: 0;
     padding-top: calc(740 / 1184 * 100%);
 }
+
+@media screen and (max-width: 320px){
+    .cover {
+        margin-top: 77px;
+    }
+}
