--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -14,3 +14,10 @@
         padding-left: 24px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .lead__caption {
+        padding-left: 16px;
+        padding-top: 0;
+    }
+}
