--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -18,3 +18,10 @@
         line-height: 26px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .place__paragraph {
+        padding-left: 16px;
+        max-width: 288px;
+    }
+}
