--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,3 +2,9 @@
     max-height: 46px;
     align-self: flex-end;
 }
+
+@media screen and (max-width: 320px) {
+    .place__website {
+        padding-left: 16px;
+    }
+}
