--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -10,7 +10,14 @@
     color: white;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 530px) {
+    .cover__title {
+        font-size: 52px;
+        line-height: 55px;
+    }
+}
+
+@media screen and (max-width: 380px) {
     .cover__title {
         font-size: 32px;
         line-height: 35px;
