--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -6,6 +6,14 @@
     padding-left: 0;
 }
 
+@media screen and (max-width: 530px) {
+    .footer__links {
+        flex-direction: column;
+        align-items: normal;
+        gap: 20px;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .footer__links {
         flex-direction: column;
