--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,10 +12,17 @@
     }
 }
 
+@media screen and (max-width: 720px) {
+    .footer {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .footer {
         flex-direction: column;
         align-items: flex-start;
-        padding-top: 39px;
+        padding-top: 48px;
     }
 }
