--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -15,7 +15,14 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 440px) {
+    .intro__title {
+        font-size: 48px;
+        line-height: 55px;
+    }
+}
+
+@media screen and (max-width: 350px) {
     .intro__title {
         font-size: 32px;
         line-height: 35px;
