--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -15,6 +15,20 @@
     }
 }
 
+@media screen and (max-width: 700px) {
+    .lead__subtitle {
+        font-size: 20px;
+        line-height: 25px;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    .lead__subtitle {
+        font-size: 18px;
+        line-height: 22px;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .lead__subtitle {
         font-size: 16px;
