--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,10 +6,24 @@
     font-weight: 900;
     font-size: 96px;
     line-height: 100px;
-    margin: 0 auto;
+    margin: 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 700px) {
+    .lead__title {
+        font-size: 60px;
+        line-height: 60px;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    .lead__title {
+        font-size: 48px;
+        line-height: 55px;
+    }
+}
+
+@media screen and (max-width: 350px) {
     .lead__title {
         font-size: 40px;
         line-height: 44px;
