--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -11,6 +11,12 @@
     }
 }
 
+@media screen and (max-width: 768px){
+    .lead {
+        padding: 0;
+    }
+}
+
 @media screen and (max-width: 320px){
     .lead {
         margin-top: 44px;
