--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,26 +1,26 @@
 .place__image {
-    width: 460px;
-    height: 460px;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
-}
-
-@media screen and (max-width: 1024px) {
-    .place__image {
-        width: 440px;
-        height: 440px;
-    }
 }
 
 @media screen and (max-width: 768px) {
     .place__image {
-        width: 340px;
-        height: 340px;
+        max-width: 340px;
+        max-height: 340px;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .place__image {
+        max-width: 100%;
+        max-height: 100%;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__image {
-        width: 320px;
-        height: 320px;
+        max-width: 320px;
+        max-height: 320px;
     }
 }
