--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -5,15 +5,10 @@
     justify-content: center;
     text-decoration: none;
     width: 100%;
-    background: rgba(0, 0, 0, .3);
+    background: rgba(42,44,47, .3);
     position: relative;
 }
 
-.cover__item:hover:before {
-    content: "";
-    background: rgba(0, 0, 0, .8);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    transition: opacity .3s ease;
+.cover__item:hover {
+    background: rgba(42,44,47, .8);
 }
