--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,6 +4,7 @@
     gap: 18px;
     list-style: none;
     padding-left: 0;
+    margin: 0;
 }
 
 @media screen and (max-width: 530px) {
@@ -16,8 +17,6 @@
 
 @media screen and (max-width: 320px) {
     .footer__links {
-        flex-direction: column;
-        align-items: normal;
         gap: 32px;
     }
 }
