--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -14,3 +14,9 @@
         padding-bottom: 34px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .intro__text {
+        padding-bottom: 31px;
+    }
+}
