--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 1024px) {
     .intro__title {
-        padding-bottom: 40px;
+        padding-bottom: 39px;
     }
 }
 
@@ -26,5 +26,11 @@
     .intro__title {
         font-size: 32px;
         line-height: 35px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        padding-bottom: 39px;
     }
 }
