--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -12,12 +12,13 @@
 @media screen and (max-width: 768px) {
     .lead__caption {
         padding-left: 24px;
+        padding-top: 4px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .lead__caption {
         padding-left: 16px;
-        padding-top: 0;
+        padding-top: 4px;
     }
 }
