--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,7 +11,13 @@
 
 @media screen and (max-width: 1024px){
     .lead__subtitle {
-        margin-bottom: 52px;
+        margin-bottom: 57px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .lead__subtitle {
+        margin-bottom: 57px;
     }
 }
 
