--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -25,3 +25,9 @@
         max-width: 288px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .place__paragraph {
+        padding-right: 16px;
+    }
+}
