--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,6 +8,27 @@
     max-width: 460px;
 }
 
+@media screen and (max-width: 1100px) {
+    .place__title {
+        font-size: 65px;
+        line-height: 66px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .place__title {
+        font-size: 73px;
+        line-height: 76px;
+    }
+}
+
+@media screen and (max-width: 810px) {
+    .place__title {
+        font-size: 55px;
+        line-height: 55px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .place__title {
         font-size: 42px;
